prevent Intercom button from overlapping comment button

--- a/css/index.less
+++ b/css/index.less
@@ -1492,3 +1492,8 @@ ul.tags {
     }
   }
 }
+
+.single-post {
+  // prevent Intercom button from overlapping comment button
+  margin-bottom: 70px;
+}
